Client: Add module file fetch
* Add the cli command
* Update API desc accordingly
* Send correct binary media type
* Fix blob-receiving in client-generation
