# docs/orchestrator/api.yml
@@ -152,36 +152,36 @@ paths:
                 $ref: "#/components/schemas/Error"
 
 
-  /file/module/{module_id}/file:
+  /file/module/{module_id}/{file_name}:
+    parameters:
+      - name: module_id
+        in: path
+        description: ID of the module
+        required: true
+        schema:
+          type: string
+      - name: file_name
+        in: path
+        description: Name of an associated file.
+        required: true
+        schema:
+          type: string
     get:
-      description: Return files associated to a module
-      parameters:
-        - name: module_id
-          in: path
-          description: ID of the module
-          required: true
-          schema:
-            type: string
-        - name: file_id
-          in: query
-          description: |
-            ID of a specific file. May contain directory separatoring characters
-            (i.e. '\' or '/'). Leave empty to get all the associated files
-          required: false
-          schema:
-            type: string
+      description: Return a file associated to a module
       responses:
         '200':
-          description: An mapping of file IDs (the object keys) to binary files
+          description: The file
           content:
-            multipart/form-data:
+            application/octet-stream:
               schema:
-                type: object
-                items:
-                  type: string
-                  format: binary
+                type: string
+                format: binary
+            application/wasm:
+              schema:
+                type: string
+                format: binary
         '404':
-          description: No modules found
+          description: Module or file not found
           content:
             application/json:
               schema:
